Se añade el archivo products.json y se cargan los productos en el index.html

--- a/menu.html
+++ b/menu.html
@@ -95,7 +95,7 @@
         <section class="categories">
             <h2 class="section__title">Categorías</h2>
             <div class="categories__container">
-                <div class="category">
+                <div id="todo" class="category">
                     <svg class="icons" version="1.0" xmlns="http://www.w3.org/2000/svg" width="300.000000pt"
                         height="300.000000pt" viewBox="0 0 300.000000 300.000000" preserveAspectRatio="xMidYMid meet">
                         <g transform="translate(0.000000,300.000000) scale(0.100000,-0.100000)" fill="#000000"
@@ -153,7 +153,7 @@
                     </svg>
                     <h3 class="category__type">Todo</h3>
                 </div>
-                <div class="category">
+                <div id="hamburguesa" class="category">
                     <svg class="icons" version="1.0" xmlns="http://www.w3.org/2000/svg" width="300.000000pt"
                         height="300.000000pt" viewBox="0 0 300.000000 300.000000" preserveAspectRatio="xMidYMid meet">
                         <g transform="translate(0.000000,300.000000) scale(0.100000,-0.100000)" fill="#000000"
@@ -212,7 +212,7 @@ l-19 37 200 0 c110 0 200 -3 200 -7z m491 -30 c-74 -145 -276 -156 -356 -19
                     </svg>
                     <h3 class="category__type">Hamburguesas</h3>
                 </div>
-                <div class="category">
+                <div id="hot-dog" class="category">
                     <svg class="icons" version="1.0" xmlns="http://www.w3.org/2000/svg" width="300.000000pt"
                         height="300.000000pt" viewBox="0 0 300.000000 300.000000" preserveAspectRatio="xMidYMid meet">
 
@@ -259,7 +259,7 @@ c-19 -2 -60 2 -90 8 -136 30 -236 119 -279 247 -21 61 -21 77 -21 923 0 846 0
                     </svg>
                     <h3 class="category__type">Hot Dogs</h3>
                 </div>
-                <div class="category">
+                <div id="salchipapa" class="category">
                     <svg class="icons" version="1.0" xmlns="http://www.w3.org/2000/svg" width="300.000000pt"
                         height="300.000000pt" viewBox="0 0 300.000000 300.000000" preserveAspectRatio="xMidYMid meet">
 
@@ -317,7 +317,7 @@ c-19 -2 -60 2 -90 8 -136 30 -236 119 -279 247 -21 61 -21 77 -21 923 0 846 0
                     </svg>
                     <h3 class="category__type">Salchipapa</h3>
                 </div>
-                <div class="category">
+                <div id="sandwich" class="category">
                     <svg class="icons" version="1.0" xmlns="http://www.w3.org/2000/svg" width="300.000000pt"
                         height="300.000000pt" viewBox="0 0 300.000000 300.000000" preserveAspectRatio="xMidYMid meet">
                         <g transform="translate(0.000000,300.000000) scale(0.100000,-0.100000)" fill="#000000"
@@ -429,7 +429,7 @@ m-429 -34 c3 -6 23 -19 43 -30 l37 -19 -52 -1 c-52 0 -53 0 -53 30 0 30 13 40
                     </svg>
                     <h3 class="category__type">Sandwiches</h3>
                 </div>
-                <div class="category">
+                <div id="empanada" class="category">
                     <svg class="icons" version="1.0" xmlns="http://www.w3.org/2000/svg" width="300.000000pt"
                         height="300.000000pt" viewBox="0 0 300.000000 300.000000" preserveAspectRatio="xMidYMid meet">
                         <g transform="translate(0.000000,300.000000) scale(0.100000,-0.100000)" fill="#000000"
@@ -498,7 +498,7 @@ m-429 -34 c3 -6 23 -19 43 -30 l37 -19 -52 -1 c-52 0 -53 0 -53 30 0 30 13 40
                     </svg>
                     <h3 class="category__type">Empanadas</h3>
                 </div>
-                <div class="category">
+                <div id="combo" class="category">
                     <svg class="icons" version="1.0" xmlns="http://www.w3.org/2000/svg" width="300.000000pt"
                         height="300.000000pt" viewBox="0 0 300.000000 300.000000" preserveAspectRatio="xMidYMid meet">
                         <g transform="translate(0.000000,300.000000) scale(0.100000,-0.100000)" fill="#000000"
@@ -567,7 +567,7 @@ m-429 -34 c3 -6 23 -19 43 -30 l37 -19 -52 -1 c-52 0 -53 0 -53 30 0 30 13 40
                     </svg>
                     <h3 class="category__type">Combos</h3>
                 </div>
-                <div class="category">
+                <div id="bebida" class="category">
                     <svg class="icons" version="1.0" xmlns="http://www.w3.org/2000/svg" width="300.000000pt"
                         height="300.000000pt" viewBox="0 0 300.000000 300.000000" preserveAspectRatio="xMidYMid meet">
 
@@ -629,116 +629,57 @@ l-6 -61 -426 -236 c-235 -131 -428 -236 -430 -234 -1 2 -4 50 -5 107 l-3 104
         <!-- *Cards* -->
         <section class="cards">
 
-            <!-- *Card: Hamburguesa La Fundadora* -->
-            <a href="index.html#card-1" class="card__modal">
-
-                <div class="card">
-
-                    <figure class="card__header">
-                        <img class="card__img" src="assets/images/products/hamburguesa-la-fundadora.jpg"
-                            alt="Hamburguesa Fundadora">
-                    </figure>
-
-                    <div class="card__body">
-
-                        <div class="card__body-section-start">
-                            <h3 class="card__title">Hamburguesa La Fundadora</h3>
-                            <div class="card__rating">
-                                <svg class="card__icon icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path
-                                        d="m233-80 65-281L80-550l288-25 112-265 112 265 288 25-218 189 65 281-247-149L233-80Z" />
-                                </svg>
-                                <span class="card__score">4.9</span>
-                            </div>
-                        </div>
-
-                        <p class="card__description">
-                            Pan brioche 🍔 + Carne 100% de Res 🍣 + Queso mozzarella 🧀 + Cebolla caramelizada
-                            🧅 +
-                            Tocineta 🥓 + Vegetales frescos 🥬🥒 + salsas de la casa. 🍶
-                        </p>
-
-                        <div class="card__body-section-end">
-
-                            <h4 class="card__price">COP $15.000</h4>
-
-                            <button class="card__add-cart-btn">
-                                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path
-                                        d="M465-613v-123H341v-60h124v-123h60v123h123v60H525v123h-60ZM289.788-80Q260-80 239-101.212q-21-21.213-21-51Q218-182 239.212-203q21.213-21 51-21Q320-224 341-202.788q21 21.213 21 51Q362-122 340.788-101q-21.213 21-51 21Zm404 0Q664-80 643-101.212q-21-21.213-21-51Q622-182 643.212-203q21.213-21 51-21Q724-224 745-202.788q21 21.213 21 51Q766-122 744.788-101q-21.213 21-51 21ZM290-287q-42 0-61.5-34t.5-69l61-111-150-319H62v-60h116l170 364h292l156-280 52 28-153 277q-9.362 16.667-24.681 25.833Q655-456 634-456H334l-62 109h494v60H290Z" />
-                                </svg>
-                            </button>
-
-                            <div class="card__quantity-btn card__quantity-btn--hidden">
-                                <svg class="card__remove icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path d="M200-450v-60h560v60H200Z" />
-                                </svg>
-                                <input type="number" class="card__num-items"></input>
-                                <svg class="card__add icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path d="M450-450H200v-60h250v-250h60v250h250v60H510v250h-60v-250Z" />
-                                </svg>
-                            </div>
-
-                        </div>
-
-                    </div>
-                </div>
-            </a>
-
-            <!-- *Card: Hot Dog Fundador* -->
-            <a href="index.html#card-1" class="card__modal">
-                <div class="card">
-                    <figure class="card__header">
-                        <img class="card__img" src="assets/images/products/hot-dog-fundador.jpg" alt="Hot Dog Fundador">
-                    </figure>
-
-                    <div class="card__body">
-
-                        <div class="card__body-section-start">
-                            <h3 class="card__title">Hot Dog Fundador</h3>
-                            <div class="card__rating">
-                                <svg class="card__icon icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path
-                                        d="m233-80 65-281L80-550l288-25 112-265 112 265 288 25-218 189 65 281-247-149L233-80Z" />
-                                </svg>
-                                <span class="card__score">4.7</span>
-                            </div>
-                        </div>
-                        <p class="card__description">
-                            Pan bríoche 🥖 + Salchicha Americana 🌭 + Queso mozarella 🧀 + queso cheedar 🧀 + Tocineta
-                            picada 🥓 + Pepinos encurtidos 🥒 + Salsas de la casa 🥣
-                        </p>
-                        <div class="card__body-section-end">
-                            <h4 class="card__price">COP $13.000</h4>
-                            <button class="card__add-cart-btn">
-                                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path
-                                        d="M465-613v-123H341v-60h124v-123h60v123h123v60H525v123h-60ZM289.788-80Q260-80 239-101.212q-21-21.213-21-51Q218-182 239.212-203q21.213-21 51-21Q320-224 341-202.788q21 21.213 21 51Q362-122 340.788-101q-21.213 21-51 21Zm404 0Q664-80 643-101.212q-21-21.213-21-51Q622-182 643.212-203q21.213-21 51-21Q724-224 745-202.788q21 21.213 21 51Q766-122 744.788-101q-21.213 21-51 21ZM290-287q-42 0-61.5-34t.5-69l61-111-150-319H62v-60h116l170 364h292l156-280 52 28-153 277q-9.362 16.667-24.681 25.833Q655-456 634-456H334l-62 109h494v60H290Z" />
-                                </svg>
-                            </button>
-                            <div class="card__quantity-btn card__quantity-btn--hidden">
-                                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path d="M200-450v-60h560v60H200Z" />
-                                </svg>
-                                <span class="card__num-items">1</span>
-                                <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                                    viewBox="0 -960 960 960" width="48">
-                                    <path d="M450-450H200v-60h250v-250h60v250h250v60H510v250h-60v-250Z" />
-                                </svg>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </a>
         </section>
     </main>
+
+    <template id="template-card">
+        <div class="card">
+
+            <figure class="card__header">
+                <img class="card__img">
+            </figure>
+            <div class="card__body">
+                <div class="card__product-detail">
+                    <h3 class="card__title"></h3>
+                    <div class="card__rating">
+                        <svg class="card__icon icons" xmlns="http://www.w3.org/2000/svg" height="48"
+                            viewBox="0 -960 960 960" width="48">
+                            <path
+                                d="m233-80 65-281L80-550l288-25 112-265 112 265 288 25-218 189 65 281-247-149L233-80Z" />
+                        </svg>
+                        <span class="card__score"></span>
+                    </div>
+                </div>
+                <p class="card__description"></p>
+
+                <div class="card__order-detail">
+
+                    <h4 class="card__price">COP $ <span class="card__value"></span></h4>
+
+                    <button class="card__add-cart-btn">
+                        <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960"
+                            width="48">
+                            <path
+                                d="M465-613v-123H341v-60h124v-123h60v123h123v60H525v123h-60ZM289.788-80Q260-80 239-101.212q-21-21.213-21-51Q218-182 239.212-203q21.213-21 51-21Q320-224 341-202.788q21 21.213 21 51Q362-122 340.788-101q-21.213 21-51 21Zm404 0Q664-80 643-101.212q-21-21.213-21-51Q622-182 643.212-203q21.213-21 51-21Q724-224 745-202.788q21 21.213 21 51Q766-122 744.788-101q-21.213 21-51 21ZM290-287q-42 0-61.5-34t.5-69l61-111-150-319H62v-60h116l170 364h292l156-280 52 28-153 277q-9.362 16.667-24.681 25.833Q655-456 634-456H334l-62 109h494v60H290Z" />
+                        </svg>
+                    </button>
+
+                    <div class="card__quantity-btn card__quantity-btn--hidden">
+                        <svg class="card__remove icons" xmlns="http://www.w3.org/2000/svg" height="48"
+                            viewBox="0 -960 960 960" width="48">
+                            <path d="M200-450v-60h560v60H200Z" />
+                        </svg>
+                        <input type="number" class="card__num-items"></input>
+                        <svg class="card__add icons" xmlns="http://www.w3.org/2000/svg" height="48"
+                            viewBox="0 -960 960 960" width="48">
+                            <path d="M450-450H200v-60h250v-250h60v250h250v60H510v250h-60v-250Z" />
+                        </svg>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </template>
 
     <script type="module" src="js/script.js"></script>
 </body>
