--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <article class="products__popular container_max-width">
                 <h2 class="section__title">Mas populares</h2>
 
-                <div class="cards">
+                <div>
                     <a href="#card-1" class="card__modal">
                         <div class="card">
                             <figure class="card__header">
