Se corrige las rutas de las imagenes y fonts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Document</title>
+    <title>Mestieri</title>
 </head>
 
 <body>
@@ -72,6 +72,7 @@
             </div>
 
         </div>
+
     </header>
 
     <!-- *Main* -->
@@ -93,7 +94,7 @@
                 <p class="home__parragraph">
                     ¡Ven y descubre por qué somos la opción favorita de los amantes de la comida rápida!
                 </p>
-                <a class="home__btn link_to_btn link_to_btn--dark" href="#">Ordena Ahora</a>
+                <a class="home__btn link_to_btn link_to_btn--dark" href="menu.html">Ordena Ahora</a>
             </div>
             <figure class="home__figure">
                 <img class="home__img" src="assets/images/logo-mestieri.jpg" alt="">
@@ -165,35 +166,35 @@
                 <h2 class="section__title">Otros Productos</h2>
                 <div class="slider">
                     <div class="slider__slide">
-                        <img class="slider__img" src="/assets/images/products/hamburguesa-de-pollo.jpg" alt="">
+                        <img class="slider__img" src="assets/images/products/hamburguesa-de-pollo.jpg" alt="">
                         <div class="slider__hover">
                             <h3 class="slider__title">Hamburguesa de Pollo</h3>
                             <a class="slider__btn link_to_btn link_to_btn--light" href="menu.html">Ordena Ahora</a>
                         </div>
                     </div>
                     <div class="slider__slide">
-                        <img class="slider__img" src="/assets/images/products/hamburguesa-mixta.jpg" alt="">
+                        <img class="slider__img" src="assets/images/products/hamburguesa-mixta.jpg" alt="">
                         <div class="slider__hover">
                             <h3 class="slider__title">Hamburguesa Mixta</h3>
                             <a class="slider__btn link_to_btn link_to_btn--light" href="menu.html">Ordena Ahora</a>
                         </div>
                     </div>
                     <div class="slider__slide">
-                        <img class="slider__img" src="/assets/images/products/sandwich-pollo.jpg" alt="">
+                        <img class="slider__img" src="assets/images/products/sandwich-pollo.jpg" alt="">
                         <div class="slider__hover">
                             <h3 class="slider__title">Sandwich de Pollo</h3>
                             <a class="slider__btn link_to_btn link_to_btn--light" href="menu.html">Ordena Ahora</a>
                         </div>
                     </div>
                     <div class="slider__slide">
-                        <img class="slider__img" src="/assets/images/products/salchipapa-basica-principal.jpg" alt="">
+                        <img class="slider__img" src="assets/images/products/salchipapa-basica-principal.jpg" alt="">
                         <div class="slider__hover">
                             <h3 class="slider__title">Salchipapa Básica Principal</h3>
                             <a class="slider__btn link_to_btn link_to_btn--light" href="menu.html">Ordena Ahora</a>
                         </div>
                     </div>
                     <div class="slider__slide">
-                        <img class="slider__img" src="/assets/images/products/papas-cheedar.jpg" alt="">
+                        <img class="slider__img" src="assets/images/products/papas-cheedar.jpg" alt="">
                         <div class="slider__hover">
                             <h3 class="slider__title">Papas Cheedar</h3>
                             <a class="slider__btn link_to_btn link_to_btn--light" href="menu.html">Ordena Ahora</a>
