--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/components/menu.css">
-    <title>Document</title>
+    <title>Mestieri</title>
 </head>
 
 <body>
