--- a/index.html
+++ b/index.html
@@ -210,29 +210,26 @@
 
             <article class="about__container hero-image"
                 style="--hero-image-url: url('/assets/images/acerca.jpg'); --hero-attachment: fixed; --hero-opacity-color: var(--black-alpha-color);">
-                <h2 class="section__title">Acerca de <i>Mestieri</i></h2>
+                <h2 class="section__title--white">Acerca de <i>Mestieri</i></h2>
 
-                <p class="about__paragraph">
+                <p class="section__paragraph">
                     En Mestieri, nos apasiona ofrecer una experiencia culinaria única y deliciosa. Desde nuestros
                     humildes inicios como un pequeño puesto de comida, nos hemos convertido en un destino reconocido
                     para
                     aquellos que buscan disfrutar de platos rápidos y sabrosos.
                 </p>
-                <p class="about__paragraph">
+                <p class="section__paragraph">
                     Nuestro enfoque se basa en la combinación perfecta de calidad y rapidez, utilizando ingredientes
                     frescos y de alta calidad para preparar comidas llenas de sabor.
                 </p>
-                <p class="about__paragraph">
+                <p class="section__paragraph">
                     Cada plato es elaborado cuidadosamente por nuestro talentoso equipo, que trabaja para mantener los
                     estándares más altos en cada preparación. En Mestieri Fast Food, estamos comprometidos con tu
                     satisfacción y esperamos verte pronto en nuestro restaurante.
                 </p>
-                <p class="about__paragraph">
+                <p class="section__paragraph">
                     ¡Gracias por ser parte de nuestra historia y apoyarnos en nuestro viaje gastronómico!
                 </p>
-                <!-- <figure class="about__figure">
-                    <img class="about_img" src="assets/images/acerca.jpg" alt="">
-                </figure> -->
             </article>
 
         </section>
@@ -372,77 +369,6 @@
         <small>© 2023 Todos los derechos
             reservados.</small>
     </footer>
-
-
-    <article class="modal modal-card" id="card-1">
-
-        <div class="modal__content modal-card__content">
-
-            <a href="#cerrar" class="modal-card__close modal__close">
-                <svg class="icons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30px" height="30px">
-                    <path
-                        d="M15,3C8.373,3,3,8.373,3,15c0,6.627,5.373,12,12,12s12-5.373,12-12C27,8.373,21.627,3,15,3z M16.414,15 c0,0,3.139,3.139,3.293,3.293c0.391,0.391,0.391,1.024,0,1.414c-0.391,0.391-1.024,0.391-1.414,0C18.139,19.554,15,16.414,15,16.414 s-3.139,3.139-3.293,3.293c-0.391,0.391-1.024,0.391-1.414,0c-0.391-0.391-0.391-1.024,0-1.414C10.446,18.139,13.586,15,13.586,15 s-3.139-3.139-3.293-3.293c-0.391-0.391-0.391-1.024,0-1.414c0.391-0.391,1.024-0.391,1.414,0C11.861,10.446,15,13.586,15,13.586 s3.139-3.139,3.293-3.293c0.391-0.391,1.024-0.391,1.414,0c0.391,0.391,0.391,1.024,0,1.414C19.554,11.861,16.414,15,16.414,15z" />
-                </svg>
-            </a>
-
-            <div class="modal-card__header hero-image"
-                style="--hero-image-url: url('/assets/images/products/hamburguesa-la-fundadora.jpg')">
-            </div>
-
-            <div class="modal-card__body card__body">
-
-                <div class="modal-card__body-section-start card__body-section-start">
-                    <h3 class="modal-card__title card__title">Hamburguesa La Fundadora</h3>
-                    <div class="modal-card__rating card__rating">
-                        <svg class="modal-card__icon card__icon icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                            viewBox="0 -960 960 960" width="48">
-                            <path
-                                d="m233-80 65-281L80-550l288-25 112-265 112 265 288 25-218 189 65 281-247-149L233-80Z" />
-                        </svg>
-                        <span class="modal-card__score card__score">4.9</span>
-                    </div>
-                </div>
-
-                <p class="modal-card__description card__description">
-                    Pan brioche 🍔 + Carne 100% de Res 🍣 + Queso mozzarella 🧀 + Cebolla caramelizada
-                    🧅 +
-                    Tocineta 🥓 + Vegetales frescos 🥬🥒 + salsas de la casa. 🍶
-                </p>
-
-                <div class="modal-card__body-section-end card__body-section-end">
-                    <h4 class="modal-card__price card__price">COP $15.000</h4>
-
-                    <button class="modal-card__add-cart-btn card__add-cart-btn modal-card__ card__add-cart-btn--hidden">
-                        <svg class="icons" xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960"
-                            width="48">
-                            <path
-                                d="M465-613v-123H341v-60h124v-123h60v123h123v60H525v123h-60ZM289.788-80Q260-80 239-101.212q-21-21.213-21-51Q218-182 239.212-203q21.213-21 51-21Q320-224 341-202.788q21 21.213 21 51Q362-122 340.788-101q-21.213 21-51 21Zm404 0Q664-80 643-101.212q-21-21.213-21-51Q622-182 643.212-203q21.213-21 51-21Q724-224 745-202.788q21 21.213 21 51Q766-122 744.788-101q-21.213 21-51 21ZM290-287q-42 0-61.5-34t.5-69l61-111-150-319H62v-60h116l170 364h292l156-280 52 28-153 277q-9.362 16.667-24.681 25.833Q655-456 634-456H334l-62 109h494v60H290Z" />
-                        </svg>
-                    </button>
-
-                    <div class="modal-card__quantity-btn card__quantity-btn">
-                        <svg class="card__remove icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                            viewBox="0 -960 960 960" width="48">
-                            <path d="M200-450v-60h560v60H200Z" />
-                        </svg>
-                        <input type="number" data-num-items value="1" class="card__num-items"></input>
-                        <svg class="card__add icons" xmlns="http://www.w3.org/2000/svg" height="48"
-                            viewBox="0 -960 960 960" width="48">
-                            <path d="M450-450H200v-60h250v-250h60v250h250v60H510v250h-60v-250Z" />
-                        </svg>
-                    </div>
-
-                </div>
-
-                <div class="modal-card__cart-btn">
-                    <a href="#" class="link_to_btn link_to_btn--light">Añadir al Carrito</a>
-                    <a href="#" class="link_to_btn link_to_btn--light">Comprar</a>
-                </div>
-            </div>
-
-        </div>
-
-    </article>
 
     <article class="modal modal_log-in" id="log-in">
         <div class="modal__content">
